Path to liquibase config in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 logging.level.root=info
 logging.file.path=logs
 logging.file.name=${logging.file.path}/tracker_log.log
+
+spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
