--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ logging.file.path=logs
 logging.file.name=${logging.file.path}/tracker_log.log
 
 spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
+
+jwt.secret=${JWT_SECRET}
+jwt.expiration=10
