--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.liquibase.change-log=db/changelog/db.changelog-master.yaml
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=10
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
